...
      'mr': '',
    },
  },
  // Homepagelogin
  {
    '1mqf9cgg': {
      'en': 'Welcome back!',
      'hi': '',
      'kn': '',
      'mr': '',
    },
    '0q5965g5': {
      'en': 'Category',
...
